<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_cameras"
        android:icon="@drawable/ic_videocam"
        android:title="@string/cameras_label" />

    <item
        android:id="@+id/nav_recordings"
        android:icon="@drawable/ic_video_file"
        android:title="@string/recordings_label" />

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/ic_add"
        android:title="@string/nav_add" />

    <item
        android:id="@+id/nav_player"
        android:icon="@drawable/ic_play_circle"
        android:title="@string/play" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>
